# image_to_ascii

./: .gitignore  README.md  main.py  pyproject.toml
src/image_to_ascii/: __main__.py  logger.py  main.py  script.py
