[tool.poetry]
name = "image-to-ascii"
version = "0.1.0"
description = ""
authors = ["myuR <myurpvn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^10.2.0"
numpy = "^1.26.4"
structlog = "^24.1.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
image-to-ascii = 'src.image_to_ascii.__main__:app'
